--- a/src/demo/basic/basic.component.scss
+++ b/src/demo/basic/basic.component.scss
@@ -1,12 +1,12 @@
-:host /deep/ ngx-numeric-textbox {
-    &.ng-valid {
-        input {
-            border-left: 5px solid #42A948;
-        }
+:host ::ng-deep ngx-numeric-textbox {
+  &.ng-valid {
+    input {
+      border-left: 5px solid #42a948;
     }
-    &.ng-invalid {
-        input {
-            border-left: 5px solid #a94442;
-        }
+  }
+  &.ng-invalid {
+    input {
+      border-left: 5px solid #a94442;
     }
+  }
 }
